fix notepad tooltip from going out of bounds

--- a/src/App.scss
+++ b/src/App.scss
@@ -60,6 +60,8 @@ body{
     font-family: $body-font;
     font-size: 20px;
     margin: 0px;
+    height: 100vh;
+    width: 100vw;
     -webkit-tap-highlight-color: transparent;
     em{
         font-family: robotoItalic;
@@ -288,7 +290,8 @@ main{
                     }
                 }
                 .ql-tooltip-arrow{
-                    border-top: 6px solid $secondary-color;
+                    border-bottom-color: $secondary-color;
+                    border-top-color: $secondary-color;
                 }
                 .ql-toolbar{                    
                     background-color: $secondary-color;
@@ -316,7 +319,7 @@ main{
     @media screen and (max-width: $mobile) {
         min-width: 100% !important;
         width: 100%;
-        height: 85%;
+        height: 100%;
     }
 }
 
